# efficientdet-training

./: .gitignore  main.py  pyproject.toml
