[project]
name = "efficientdet-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "omegaconf>=2.0",
    "pycocotools>=2.0.2",
    "pyyaml>=6.0.3",
    "timm>=0.9.2",
    "torch>=1.12.1",
    "torchvision>=0.24.1",
]
